# godot-asset-library-client

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  openapi.yaml  pyproject.toml
.github/workflows/: checks.yml
godot-asset-library-client/api/assets/: get_asset_id.py  post_asset_id_delete.py  post_asset_id_support_level.py
godot-asset-library-client/api/assets_edit/: get_asset_edit_id.py  post_asset_edit_id.py  post_asset_edit_id_accept.py  post_asset_edit_id_reject.py  post_asset_edit_id_review.py
godot-asset-library-client/api/auth/: post_logout.py
godot-asset-library-client/models/: __init__.py  asset_details.py  asset_summary.py  asset_summary_download_provider.py  asset_version.py  category.py  change_password.py  edit_details.py  edit_summary.py  error.py  get_asset_sort.py  get_configure_type.py  login_forbidden_result.py  login_successful_result.py  paginated_asset_list.py  post_asset_id_support_level_json_body.py  register_successful_result.py  successful_asset_operation.py  trace_error.py  validation_error.py
godot_asset_library_client/: __init__.py
godot_asset_library_client/models/: __init__.py  asset_details.py  asset_preview.py  asset_summary.py  asset_summary_support_level.py  change_pwd_successful_result.py  edit_details.py  error.py  get_asset_support.py  get_asset_type.py  logout_successful_result.py  pagination_result.py  post_asset_edit_id_reject_json_body.py  post_asset_edit_id_response_200.py  post_asset_id_response_200.py  post_asset_response_200.py  user_details.py  username_password.py
(+12 files in other folders)
